added brand colors

--- a/index.html
+++ b/index.html
@@ -50,10 +50,14 @@
             </div>
         </div>
     </nav>
+
+<div class="hero">
     
-   <h1>Monika Narozna</h1> 
-   <h2>Holistic Experience - Creative Solutions</h2>
+   <h1 class="hero">Monika Narozna</h1> 
+   <h2 class="hero">Holistic Experience - Creative Solutions</h2>
    <i class="fa-brands fa-instagram"></i>
+
+</div>
    
 </body>
 </html>
