--- a/index.html
+++ b/index.html
@@ -52,11 +52,32 @@
     </nav>
 
 <div class="hero">
-    
    <h1 class="hero">Monika Narozna</h1> 
    <h2 class="hero">Holistic Experience - Creative Solutions</h2>
- 
 </div>
+<br>
+
+
+<div class="container my-5">
+    <div class="row justify-content-center text-center">
+        <div class="col-12 col-md-4 mb-4">
+            <div class="circle">
+                <img src="images/moss.jpg" alt="Image 1" class="circle-image">
+            </div>
+        </div>
+        <div class="col-12 col-md-4 mb-4">
+            <div class="circle">
+                <img src="images/moss.jpg" alt="Image 2" class="circle-image">
+            </div>
+        </div>
+        <div class="col-12 col-md-4 mb-4">
+            <div class="circle">
+                <img src="images/moss.jpg" alt="Image 3" class="circle-image">
+            </div>
+        </div>
+    </div>
+</div>
+
 
    
 </body>
