--- a/index.html
+++ b/index.html
@@ -58,25 +58,31 @@
 <br>
 
 
-<div class="container my-5">
-    <div class="row justify-content-center text-center">
-        <div class="col-12 col-md-4 mb-4">
-            <div class="circle">
-                <img src="images/moss.jpg" alt="Image 1" class="circle-image">
+<div class="container">
+    <div class="skills">
+        <div class="row justify-content-center text-center">
+            <div class="col-12 col-md-3 mb-5">
+                <button class="circle-button">
+                    <img src="images/moss.jpg" alt="Design" class="circle-image">
+                    <span class="circle-text">Design</span>
+                </button>
             </div>
-        </div>
-        <div class="col-12 col-md-4 mb-4">
-            <div class="circle">
-                <img src="images/moss.jpg" alt="Image 2" class="circle-image">
-            </div>
-        </div>
-        <div class="col-12 col-md-4 mb-4">
-            <div class="circle">
-                <img src="images/moss.jpg" alt="Image 3" class="circle-image">
-            </div>
+            <div class="col-12 col-md-3 mb-5">
+                    <button class="circle-button">
+                        <img src="images/moss.jpg" alt="Marketing" class="circle-image">
+                        <span class="circle-text">Marketing</span>
+                    </button>
+                </div>
+                <div class="col-12 col-md-3 mb-5">
+                    <button class="circle-button">
+                        <img src="images/moss.jpg" alt="Spirituality" class="circle-image">
+                        <span class="circle-text">Spirituality</span>
+                    </button>
+                </div>
         </div>
     </div>
 </div>
+
 
 
    
