--- a/index.html
+++ b/index.html
@@ -62,20 +62,20 @@
     <div class="skills">
         <div class="row justify-content-center text-center">
             <div class="col-12 col-md-3 mb-5">
-                <button class="circle-button">
-                    <img src="images/moss.jpg" alt="Design" class="circle-image">
+                <button class="circle-button1">
+                    <img src="images/design.jpg" alt="Design" class="circle-image">
                     <span class="circle-text">Design</span>
                 </button>
             </div>
             <div class="col-12 col-md-3 mb-5">
-                    <button class="circle-button">
-                        <img src="images/moss.jpg" alt="Marketing" class="circle-image">
+                    <button class="circle-button2">
+                        <img src="images/marketing.jpg" alt="Marketing" class="circle-image">
                         <span class="circle-text">Marketing</span>
                     </button>
                 </div>
                 <div class="col-12 col-md-3 mb-5">
-                    <button class="circle-button">
-                        <img src="images/moss.jpg" alt="Spirituality" class="circle-image">
+                    <button class="circle-button3">
+                        <img src="images/yoga.jpg" alt="Spirituality" class="circle-image">
                         <span class="circle-text">Spirituality</span>
                     </button>
                 </div>
