--- a/about.html
+++ b/about.html
@@ -51,4 +51,10 @@
         </div>
     </nav>
    <h1>Hi! I'm Monika</h1> 
+   <p>I'm a creative soul with a diverse range of passions and skills. As a specialist in front-end development and design, I craft visually stunning and functional websites and create cohesive brand identities that stand out. My expertise extends to marketing, where I help brands reach new heights through SEO optimization and impactful social media campaigns that amplify their online presence.
+</p>
+<p>
+    Beyond the digital realm, I’m a certified yoga teacher and spiritual guide, offering transformative practices like yoga and Reiki to inspire balance and mindfulness. This unique combination of technical expertise, creativity, and holistic insight allows me to approach every project with a fresh perspective, blending innovation with intention to create meaningful connections. Whether you're looking to elevate your brand or connect on a deeper spiritual level, I’m here to help you shine.
+    
+    </p>
 </body>
