--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <ul class="navbar-nav">
                  
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About Me</a>
+                        <a class="nav-link" href="#about.html">About Me</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#work">My Work</a>
