switched out images

--- a/about.html
+++ b/about.html
@@ -55,6 +55,9 @@
 </p>
 <p>
     Beyond the digital realm, I’m a certified yoga teacher and spiritual guide, offering transformative practices like yoga and Reiki to inspire balance and mindfulness. This unique combination of technical expertise, creativity, and holistic insight allows me to approach every project with a fresh perspective, blending innovation with intention to create meaningful connections. Whether you're looking to elevate your brand or connect on a deeper spiritual level, I’m here to help you shine.
-    
     </p>
+    <img src="images/about me.jpg" alt="my face">
+
+<button>My Work</button>
+<button>Contact Me</button>
 </body>
