--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <ul class="navbar-nav">
                  
                     <li class="nav-item">
-                        <a class="nav-link" href="#about.html">About Me</a>
+                        <a class="nav-link" href="about.html">About Me</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#work">My Work</a>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col-12 col-md-3 mb-5">
                     <button class="circle-button3">
-                        <img src="images/yoga.jpg" alt="Spirituality" class="circle-image">
+                        <img src="images/spirituality.jpeg" alt="Spirituality" class="circle-image">
                         <span class="circle-text">Spirituality</span>
                     </button>
                 </div>
