--- a/about.html
+++ b/about.html
@@ -54,8 +54,8 @@
    <div class="container mt-5">
     <div class="row align-items-center justify-content-center">
         <!-- Image Section -->
-        <div class="col-lg-6 mb-4 mb-lg-0">
-            <img src="images/about me.jpg" alt="My face" class="img-fluid rounded" style="max-width: 70%; height: auto;">
+        <div class="col-lg-6 mb-4 mb-lg-0 text-center">
+            <img src="images/about me.jpg" alt="My face" class="img-fluid rounded" style="max-width: 70%; height: auto;" >
         </div>
         <!-- Text Section -->
         <div class="col-lg-6 text-lg-start text-center">
@@ -68,10 +68,10 @@
         </div>
     </div>
     <!-- Buttons Section -->
-    <div class="row mt-4">
+    <div class="row mt-4 pt-4 pb-5">
         <div class="col text-center">
-            <button class="btn btn-primary mx-2">My Work</button>
-            <button class="btn btn-secondary mx-2">Contact Me</button>
+            <button type="button" class="btn btn-brand me-2">My Work</button>
+            <button type="button" class="btn btn-brand ms-2">Contact Me</button>
         </div>
     </div>
 </div>
