--- a/about.html
+++ b/about.html
@@ -70,8 +70,8 @@
     <!-- Buttons Section -->
     <div class="row mt-4 pt-4 pb-5">
         <div class="col text-center">
-            <button type="button" class="btn btn-brand me-2">My Work</button>
-            <button type="button" class="btn btn-brand ms-2">Contact Me</button>
+            <button type="button" class="btn btn-brand me-2 btn-lg">My Work</button>
+            <button type="button" class="btn btn-brand ms-2 btn-lg">Contact Me</button>
         </div>
     </div>
 </div>
