--- a/about.html
+++ b/about.html
@@ -38,13 +38,13 @@
                 <ul class="navbar-nav">
                  
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About Me</a>
+                        <a class="nav-link" href="about.html">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#work">My Work</a>
+                        <a class="nav-link" href="work.html">My Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact Me</a>
+                        <a class="nav-link" href="contact.html">Contact Me</a>
                     </li>
                 </ul>
             </div>
