--- a/work.html
+++ b/work.html
@@ -41,14 +41,15 @@
                         <a class="nav-link" href="about.html">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#work">My Work</a>
+                        <a class="nav-link" href="work.html">My Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact Me</a>
+                        <a class="nav-link" href="contact.html">Contact Me</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
 
 </body>
