--- a/work.html
+++ b/work.html
@@ -51,5 +51,39 @@
         </div>
     </nav>
 
+<div class="Design ms-5">
+    <h1>Design</h1>
+    <p>I’m an artist passionate about creating both digital and physical designs that resonate with purpose and beauty. My work often intersects with environmental projects, where I focus on crafting their visual identity and branding. With a background in graphic design and environmental studies, I bring a rare combination of creativity and sustainability expertise to every project.
 
+        Aesthetics come naturally to me, and I have an intuitive sense for design and energy, ensuring my creations not only look stunning but also feel meaningful. </p>
+<p>Check out some of my art</p>
+<div id="carouselExampleFade" class="carousel slide carousel-fade small-carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/about me.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="images/design.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="images/marketing.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</div>
+<div class="Marketing  ms-5">
+    <h1>Marketing</h1>
+</div>
+
+<div class="Spirituality  ms-5">
+    <h1>Spirituality</h1>
+</div>
 </body>
