added links to buttons

--- a/work.html
+++ b/work.html
@@ -140,9 +140,10 @@
               </p>
               <!-- Buttons Section -->
               <div class="mt-5">
-                <button type="button" class="btn btn-brand-2 me-2 btn-lg">RE-PEAT website</button>
-                <button type="button" class="btn btn-brand-2 ms-2 btn-lg">RE-PEAT Instagram</button>
+                <a href="https://www.re-peat.earth/" target="_blank" rel="noopener noreferrer" class="btn btn-brand-2 me-2 btn-lg">RE-PEAT website</a>
+                <a href="https://www.instagram.com/repeat.earth/?next=%2F" target="_blank" rel="noopener noreferrer" class="btn btn-brand-2 ms-2 btn-lg">RE-PEAT Instagram</a>
               </div>
+              
             </div>
           </div>
         </div>
