added links from home page to work page

--- a/work.html
+++ b/work.html
@@ -55,7 +55,7 @@
         <div class="row align-items-center">
           <!-- Left Column: Text -->
           <div class="col-lg-6">
-            <div class="Design ms-lg-5 fs-4">
+            <div class="ms-lg-5 fs-4" id="design">
               <h2>Design</h2>
               <p>
                 I’m an artist passionate about creating both digital and physical designs that resonate with purpose and beauty. 
@@ -131,7 +131,7 @@
       <div class="container my-5">
         <div class="row justify-content-start">
           <div class="col-lg-8 col-md-10 col-sm-12">
-            <div class="Marketing ms-lg-5 fs-4">
+            <div class="ms-lg-5 fs-4" id="marketing">
               <h2 class="mb-4">Marketing</h2>
               <p>
                 I’m a digital marketer and currently serve as the Marketing and Communications Coordinator for RE-PEAT, an environmental foundation. 
@@ -155,7 +155,7 @@
       <div class="container my-5">
         <div class="row justify-content-start">
           <div class="col-lg-8 col-md-10 col-sm-12">
-            <div class="Spirituality ms-lg-5 fs-4">
+            <div class="ms-lg-5 fs-4" id="spirituality">
               <h2 class="mb-4">Spirituality</h2>
               <p>
 
