--- a/index.html
+++ b/index.html
@@ -62,27 +62,33 @@
     <div class="skills">
         <div class="row justify-content-center text-center">
             <div class="col-12 col-md-3 mb-5">
-                <button class="circle-button1">
-                    <img src="images/design.jpg" alt="Design" class="circle-image">
-                    <span class="circle-text">Design</span>
-                </button>
+                <!-- Wrap button in an anchor tag -->
+                <a href="work.html#design" class="circle-link">
+                    <button class="circle-button1">
+                        <img src="images/design.jpg" alt="Design" class="circle-image">
+                        <span class="circle-text">Design</span>
+                    </button>
+                </a>
             </div>
             <div class="col-12 col-md-3 mb-5">
+                <a href="work.html#marketing" class="circle-link">
                     <button class="circle-button2">
                         <img src="images/marketing.jpg" alt="Marketing" class="circle-image">
                         <span class="circle-text">Marketing</span>
                     </button>
-                </div>
-                <div class="col-12 col-md-3 mb-5">
+                </a>
+            </div>
+            <div class="col-12 col-md-3 mb-5">
+                <a href="work.html#spirituality" class="circle-link">
                     <button class="circle-button3">
                         <img src="images/spirituality.jpeg" alt="Spirituality" class="circle-image">
                         <span class="circle-text">Spirituality</span>
                     </button>
-                </div>
+                </a>
+            </div>
         </div>
     </div>
 </div>
-
 
 
    
