created contact page

--- a/contact.html
+++ b/contact.html
@@ -51,5 +51,9 @@
         </div>
     </nav>
 
-
+<div class="content-container container">
+    <div class="content">
+        <h1 class="mb-5 justify-content-center mt-4">Let's get in touch!</h1>
+    </div>
+</div>
 </body>
