--- a/work.html
+++ b/work.html
@@ -172,4 +172,23 @@ Whether it’s through energy work, yoga, or simply holding space for meaningful
 
 
 </div>
+
+<footer class=" py-3 mt-5">
+  <div class="container d-flex justify-content-between align-items-center">
+      <div class="text-muted">
+          &copy; NRN Designs
+      </div>
+      <div class="d-flex gap-3">
+          <a href="https://www.instagram.com/monika.nrn/" target="_blank" class="text-dark fs-5" title="Instagram">
+              <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="mailto:monia.narozna@gmail.com" class="text-dark fs-5" title="Email">
+              <i class="fa-regular fa-envelope"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/monika-narozna-5302a2270/" target="_blank" class="text-dark fs-5" title="LinkedIn">
+              <i class="fa-brands fa-linkedin"></i>
+          </a>
+      </div>
+  </div>
+</footer>
 </body>
