--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #fffeef;">
         <div class="container-fluid">
           
-            <a class="navbar-brand" href="index.html">
-                <img src="images/MonikaLogo.svg" alt="Logo" width="150" height="120" class="d-inline-block align-text-top">
+            <a class="navbar-brand" href="index.html" title="homepage">
+                <img src="images/MonikaLogo.svg" alt="NRN Designs Logo" width="150" height="120" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -38,18 +38,19 @@
                 <ul class="navbar-nav">
                  
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About Me</a>
+                        <a class="nav-link" href="about.html" title="About Monika">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="work.html">My Work</a>
+                        <a class="nav-link" href="work.html" title="Monika work">My Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Me</a>
+                        <a class="nav-link" href="contact.html" title="Contact Monika">Contact Me</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
 
  <!-- Main Content -->
  <div class="container text-center py-5">
