--- a/work.html
+++ b/work.html
@@ -75,40 +75,40 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade small-carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/portfolio3.jpeg" class="d-block w-100" alt="...">
+                    <img src="images/portfolio3.jpeg" class="d-block w-100" alt="Apple painting">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/portfolio4.jpeg" class="d-block w-100" alt="...">
+                    <img src="images/portfolio4.jpeg" class="d-block w-100" alt="blue vase painting">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/portfolio5.jpeg" class="d-block w-100" alt="...">
+                    <img src="images/portfolio5.jpeg" class="d-block w-100" alt="sunset painting">
                   </div>
                   <div class="carousel-item ">
-                    <img src="images/portfolio6.jpeg" class="d-block w-100" alt="...">
+                    <img src="images/portfolio6.jpeg" class="d-block w-100" alt="abstract valley illustration">
                   </div>
                   <div class="carousel-item ">
-                    <img src="images/portfolio7.jpeg" class="d-block w-100" alt="...">
+                    <img src="images/portfolio7.jpeg" class="d-block w-100" alt="citrus bowl painting">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/portfolio8.jpeg" class="d-block w-100" alt="...">
+                    <img src="images/portfolio8.jpeg" class="d-block w-100" alt="mystic forest painting">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/portfolio9.jpeg" class="d-block w-100" alt="...">
+                    <img src="images/portfolio9.jpeg" class="d-block w-100" alt="sea sunset painting">
                   </div>
                 <div class="carousel-item">
-                  <img src="images/portfolio1.jpeg" class="d-block w-100" alt="...">
+                  <img src="images/portfolio1.jpeg" class="d-block w-100" alt="blurred field painting">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/portfolio10.jpeg" class="d-block w-100" alt="...">
+                  <img src="images/portfolio10.jpeg" class="d-block w-100" alt="moody flowers painting">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/portfolio11.jpeg" class="d-block w-100" alt="...">
+                  <img src="images/portfolio11.jpeg" class="d-block w-100" alt="wetland dawn painting">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/portfolio12.jpg" class="d-block w-100" alt="...">
+                    <img src="images/portfolio12.jpg" class="d-block w-100" alt="keep the peat in the ground">
                   </div>
                 <div class="carousel-item ">
-                    <img src="images/portfolio2.jpeg" class="d-block w-100" alt="...">
+                    <img src="images/portfolio2.jpeg" class="d-block w-100" alt="strawberry arrangement painting">
                   </div>
 
               </div>
