--- a/about.html
+++ b/about.html
@@ -71,8 +71,8 @@
     <!-- Buttons Section -->
     <div class="row mt-4 pt-4 pb-5">
         <div class="col text-center">
-            <button type="button" class="btn btn-brand me-2 btn-lg">My Work</button>
-            <button type="button" class="btn btn-brand ms-2 btn-lg">Contact Me</button>
+            <button type="button" class="btn btn-brand me-2 btn-lg" title="Monika's work">My Work</button>
+            <button type="button" class="btn btn-brand ms-2 btn-lg" title="Contact Monika">Contact Me</button>
         </div>
     </div>
 </div>
