--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="row justify-content-center text-center">
             <div class="col-12 col-md-3 mb-5">
                 <!-- Wrap button in an anchor tag -->
-                <a href="work.html#design" class="circle-link">
+                <a href="work.html#design" class="circle-link" title="Design work">
                     <button class="circle-button1">
                         <img src="images/design.jpg" alt="Design" class="circle-image">
                         <span class="circle-text">Design</span>
@@ -72,7 +72,7 @@
                 </a>
             </div>
             <div class="col-12 col-md-3 mb-5">
-                <a href="work.html#marketing" class="circle-link">
+                <a href="work.html#marketing" class="circle-link" title="Marketing Work">
                     <button class="circle-button2">
                         <img src="images/marketing.jpg" alt="Marketing" class="circle-image">
                         <span class="circle-text">Marketing</span>
@@ -80,7 +80,7 @@
                 </a>
             </div>
             <div class="col-12 col-md-3 mb-5">
-                <a href="work.html#spirituality" class="circle-link">
+                <a href="work.html#spirituality" class="circle-link" title="Spiritual work">
                     <button class="circle-button3">
                         <img src="images/spirituality.jpeg" alt="Spirituality" class="circle-image">
                         <span class="circle-text">Spirituality</span>
